--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,26 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single"
+        android:title="@string/capturas">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_inmueble"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="@string/inmueble" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_archivo"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="@string/archivo" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="@string/reportes">
         <menu>
             <item
                 android:id="@+id/nav_share"
