--- a/app/src/main/res/layout/activity_inmueble.xml
+++ b/app/src/main/res/layout/activity_inmueble.xml
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Arrendatario"
-                android:inputType="text"/>
+                android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/arrendador"
-                android:inputType="text"/>
+                android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -66,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/direccion"
-                android:inputType="text"/>
+                android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -79,22 +79,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/telefono"
-                android:inputType="number" />
+                android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+
+        <TextView
+            android:id="@+id/TipoInmueble"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:hint="@string/tipo_inmueble" />
 
-            <EditText
-                android:id="@+id/Tipo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/tipo"
-                android:inputType="text"/>
 
-        </android.support.design.widget.TextInputLayout>
+        <Spinner
+            android:id="@+id/spTipoInmueble"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -167,66 +168,83 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/Parqueadero"
+                android:id="@+id/Contrato"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/parqueadero"
-                android:inputType="text" />
+                android:hint="@string/contrato"
+                android:inputType="number" />
 
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <TextView
+            android:id="@+id/Patio"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:hint="@string/patio" />
 
-            <EditText
-                android:id="@+id/Lavadero"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/lavadero"
-                android:inputType="text" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
+        <Spinner
+            android:id="@+id/spPatio"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/Comedor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/comedor"
-                android:inputType="text" />
-
-        </android.support.design.widget.TextInputLayout>
-
-
-        <android.support.design.widget.TextInputLayout
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/Parqueadero"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:hint="@string/parqueadero" />
 
-            <EditText
-                android:id="@+id/SalaComedor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sala_comedor"
-                android:inputType="text" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
+        <Spinner
+            android:id="@+id/spParqueadero"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content" />
 
-            <EditText
-                android:id="@+id/Sala"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sala"
-                android:inputType="text" />
+        <TextView
+            android:id="@+id/Lavadero"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/lavadero" />
 
-        </android.support.design.widget.TextInputLayout>
+
+        <Spinner
+            android:id="@+id/spLavadero"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/Comedor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/comedor" />
+
+
+        <Spinner
+            android:id="@+id/spComedor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+
+        <TextView
+            android:id="@+id/SalaComedor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/sala_comedor" />
+
+
+        <Spinner
+            android:id="@+id/spSalaComedor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/Sala"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/tipo_inmueble" />
+
+
+        <Spinner
+            android:id="@+id/spSala"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -252,8 +270,6 @@
 
 
     </LinearLayout>
-
-
 
 
 </ScrollView>
