--- a/app/src/main/res/layout/activity_archivo.xml
+++ b/app/src/main/res/layout/activity_archivo.xml
@@ -1,34 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_archivo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="com.obando.mejia.arrendapp.ArchivoActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_archivo" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    <TextView
+        android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:text="@string/Registro_de_Archivos"
+        android:textSize="30sp"
+        android:layout_centerHorizontal="true"/>
 
-</android.support.design.widget.CoordinatorLayout>
+    <TextView
+        android:id="@+id/TipoArchivo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/Tipo_Archivo"
+        android:layout_below="@+id/titulo"
+        android:layout_marginTop="16dp"/>
+
+    <Spinner
+        android:id="@+id/spTipoArchivo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TipoArchivo"/>
+
+    <TextView
+        android:id="@+id/FechaInicial"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/fecha_inicial"
+        android:layout_below="@+id/spTipoArchivo"
+        android:layout_marginTop="16dp"/>
+
+    <RelativeLayout
+        android:id="@+id/fragment_fechaInicial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/FechaInicial"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:id="@+id/Ruta"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/Ruta"
+        android:layout_below="@+id/fragment_fechaInicial"
+        android:layout_marginTop="16dp"/>
+
+    <EditText
+        android:id="@+id/CampoRuta"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/Ruta"
+        android:layout_below="@+id/Ruta"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:id="@+id/Descripcion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/Descripcion"
+        android:layout_below="@+id/CampoRuta"
+        android:layout_marginTop="16dp"/>
+
+    <EditText
+        android:id="@+id/CampoDescripcion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/Descripcion"
+        android:layout_below="@+id/Descripcion"
+        android:layout_marginTop="16dp"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/BtnGuardar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end|center_horizontal"
+        app:srcCompat="@android:drawable/ic_menu_save"
+        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/CampoDescripcion"
+        android:layout_toRightOf="@+id/fragment_fechaInicial"
+        android:layout_toEndOf="@+id/fragment_fechaInicial" />
+
+
+</RelativeLayout>
+
+
