--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,9 +12,13 @@
             android:icon="@drawable/ic_insert_drive_file_black_48dp"
             android:title="@string/archivo" />
         <item
-            android:id="@+id/nav_contrato"
-            android:icon="@drawable/ic_create_black_48dp"
-            android:title="@string/contrato" />
+        android:id="@+id/nav_contrato"
+        android:icon="@drawable/ic_create_black_48dp"
+        android:title="@string/contrato" />
+        <item
+            android:id="@+id/nav_usuario"
+            android:icon="@drawable/ic_account_circle_black_48dp"
+            android:title="@string/Usuarios" />
     </group>
 
     <item android:title="@string/reportes">
@@ -22,11 +26,11 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="@string/Share" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="@string/Send" />
         </menu>
     </item>
 
