--- a/app/src/main/res/layout/activity_archivo.xml
+++ b/app/src/main/res/layout/activity_archivo.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
 
-    tools:context="com.obando.mejia.arrendapp.ArchivoActivity">
+    tools:context="com.obando.mejia.arrendapp.Controlador.Activity.ArchivoActivity">
 
     <LinearLayout
         android:id="@+id/layoutinmueble"
