--- a/app/src/main/res/layout/activity_habitacion.xml
+++ b/app/src/main/res/layout/activity_habitacion.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.obando.mejia.arrendapp.HabitacionActivity">
+    tools:context="com.obando.mejia.arrendapp.Controlador.Activity.HabitacionActivity">
 
     <TextView
         android:id="@+id/titulo"
