--- a/app/src/main/res/layout/activity_inmueble.xml
+++ b/app/src/main/res/layout/activity_inmueble.xml
@@ -12,7 +12,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.obando.mejia.arrendapp.InmuebleActivity"
+    tools:context="com.obando.mejia.arrendapp.Controlador.Activity.InmuebleActivity"
     tools:showIn="@layout/activity_inmueble">
 
     <LinearLayout
