--- a/app/src/main/res/layout/fragment_fecha.xml
+++ b/app/src/main/res/layout/fragment_fecha.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context="com.obando.mejia.arrendapp.FechaFragment"
+    tools:context="com.obando.mejia.arrendapp.Controlador.Fragment.FechaFragment"
     android:focusable="true"
     android:focusableInTouchMode="true">
 
