--- a/app/src/main/res/layout/lista_usuarios.xml
+++ b/app/src/main/res/layout/lista_usuarios.xml
@@ -10,7 +10,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        app:cardBackgroundColor="@color/colorAccent"
+        app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="12dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true">
